# createLofterNovel

./: .gitignore  CLAUDE.md  README.md  index.js  package-lock.json  package.json  start.bat  tailwind.config.js
.claude/: settings.local.json
Tips/: 搜梗提示词.txt  生文提示词(第一版).txt  生文提示词.txt
public/: article-list.html  geng-list.html  index.html  work-cp-list.html
public/css/: output.css  style.css
public/js/: app.js  articleActions.js  components.js  gengActions.js
src/: server.js
src-tauri/: Cargo.toml  start-tauri-dev.bat  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/browser/: browserManager.js  doubao.js  kimi.js  metaso.js
src/controllers/: articleController.js  browserController.js  gengContentController.js  statusController.js  workCpController.js
src/database/: db.js  dbManager.js  mysqlDb.js
src/services/: articleService.js  gengContentService.js  workCpService.js
src/utils/: idGenerator.js  index.js
