[package]
name = "lofter-novel"
version = "0.1.0"
description = "自动化搜梗+生文桌面工具"
authors = ["luopy"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = [] }
tokio = { version = "1", features = ["time"] }
